[package]
name = "html-inline"
description = "Reads an html file and inlines all the images with base64"
version = "0.2.0"
license = "MIT"
authors = ["EdJoPaTo <html-inline-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
image-base64-wasm = "0.6"
quick-xml = "0.22"
ureq = "2"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
