[package]
name = "html-inline"
description = "Reads an HTML file and inlines all the images and stylesheets"
keywords = ["html", "inline", "image", "base64", "css"]
version = "0.4.1"
license = "MIT"
authors = ["EdJoPaTo <html-inline-rust@edjopato.de>"]
repository = "https://github.com/EdJoPaTo/html-inline"
edition = "2018"
include = ["src/**/*", "LICENSE", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["clap"]

[profile.release]
lto = true

[dependencies]
anyhow = "1"
html5ever = "0.25"
kuchiki = "0.8"
ureq = "2"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
optional = true

[dependencies.image-base64]
git = "https://github.com/SaiintBrisson/image-base64-rs"
branch = "master"
